[package]
name = "ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
url = "2.2.2"
futures-util = "0.3.21"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"] }
